[gd_scene load_steps=5 format=3 uid="uid://buvdhtxsdft4p"]

[ext_resource type="Theme" uid="uid://blt1eyj3xshax" path="res://assets/UI/themes/UI-elements/panel-container-secondary.tres" id="1_6slyw"]
[ext_resource type="Script" path="res://UI/dialog/dialog.gd" id="1_nkmvh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a010e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gje2y"]

[node name="Dialog" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.0
offset_top = -78.5
offset_right = 325.0
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6slyw")
script = ExtResource("1_nkmvh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="LocationDialogContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="TitleContainer" type="PanelContainer" parent="MarginContainer/LocationDialogContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_a010e")

[node name="Title" type="Label" parent="MarginContainer/LocationDialogContainer/TitleContainer"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DescriptionContainer" type="PanelContainer" parent="MarginContainer/LocationDialogContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_gje2y")

[node name="Description" type="Label" parent="MarginContainer/LocationDialogContainer/DescriptionContainer"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
autowrap_mode = 2

[node name="DialogResources" type="VBoxContainer" parent="MarginContainer/LocationDialogContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 10

[node name="ChoiceFrame" type="VBoxContainer" parent="MarginContainer/LocationDialogContainer"]
layout_mode = 2
theme_override_constants/separation = 10
